# learning-agent

./: .gitignore  LICENSE  learning_agent.config.json  pyproject.toml
docs/: aspirational_ui_redesign_brief.md  design_doc.md  in_context_learning_loop_design.md  in_context_learning_loop_implementation.md  phase_1_implementation.md  polished_ui_modernization_plan.md  prd.md  week_chat_sidebar_redesign.md
learning_agent/: __init__.py  __main__.py  cli.py  config.py  controller.py  curriculum.py  errors.py  models.py  prompts.py  state.py  ui.py
learning_agent/prompts/: junior.md  mentor.md
learning_agent/providers/: __init__.py  base.py  factory.py  openai_provider.py
scripts/: capture_demo_ui.py  demo_ui_server.py
tests/: test_cli.py  test_cli_reload.py  test_config.py  test_controller.py  test_curriculum.py  test_openai_provider.py  test_ui.py
